--- a/shop.html
+++ b/shop.html
@@ -93,21 +93,22 @@
               "font-size": "15px"
             },
             "button": {
-                  "font-family": "Jost, sans-serif",
-                  "font-size": "14px",
-                  "line-height": "36px",
-                  "height": "36px",
-                  "padding": "0 16px",
-                  "border-radius" : "2px",
-                  "text-transform" : "uppercase",
-                  "outline" : "0",
-                  "letter-spacing" : ".5px",
-                  ":hover": {
-                    "background-color": "#484848"
-                  },
-                  "background-color": "#424242",
-                  ":focus": {
-                    "background-color": "#444444"
+                  // "font-family": "Jost, sans-serif",
+                  // "font-size": "14px",
+                  // "line-height": "36px",
+                  // "height": "36px",
+                  // "padding": "0 16px",
+                  // "border-radius" : "2px",
+                  // "text-transform" : "uppercase",
+                  // "outline" : "0",
+                  // "letter-spacing" : ".5px",
+                  // ":hover": {
+                  //   "background-color": "#484848"
+                  // },
+                  // "background-color": "#424242",
+                  // ":focus": {
+                  //   "background-color": "#444444"
+                  "display": "none"
               },
               "border-radius": "0px",
               "padding-left": "27px",
