--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
       <div class="footer hide-on-med-and-down">
         <ul>
-          <li>Privacy Policy</li>
-          <li>Terms of Service</li>
-          <li>Shipping + Returns</li>
-          <li>Instagram</li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Service</a></li>
+          <li><a href="shipping.html">Shipping + Returns</a></li>
+          <li><a href="https://instagram.com/nile_mx">Instagram</a></li>
         </ul>
       </div>
 
