--- a/shop.html
+++ b/shop.html
@@ -38,9 +38,12 @@
       </nav>
 
       <ul class="sidenav" id="mobile-demo">
+        <img src="lib/img/sidenav_header.jpg" id="sidenavHeadImg">
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Service</a></li>
       </ul>
 
     <div id="shopContainer">
@@ -242,29 +245,12 @@
     </div>
 
     <div class="footer hide-on-med-and-down">
-      <div class="row">
-          <div class="col s4">
-            <h6>Company:</h6>
-                <ul>
-                    <li><a href="about.html">About us</a></li>
-                    <li><a href="privacy.html">Privacy Policy</a></li>
-                    <li><a href="terms.html">Terms of Service</a></li>
-                </ul>
-              </div>
-            <div class="col s4">
-                <h6>Customer Service:</h6>
-                <ul>
-                    <li><a href="shipping.html">Shipping + Returns</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-              </div>
-            <div class="col s4">
-                <ul id="footerSocial">
-                    <li><i class="fab fa-instagram"></i></li>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                </ul>
-            </div>
-      </div>
+      <ul>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+        <li><a href="terms.html">Terms of Service</a></li>
+        <li><a href="shipping.html">Shipping + Returns</a></li>
+        <li><a href="https://instagram.com/nile_mx">Instagram</a></li>
+      </ul>
     </div>
    
 
