--- a/terms.html
+++ b/terms.html
@@ -152,31 +152,14 @@
         </div>
 
 
-      <div class="footer hide-on-med-and-down">
-        <div class="row">
-            <div class="col s4">
-              <h6>Company:</h6>
-              <ul>
-                  <li><a href="about.html">About us</a></li>
-                  <li><a href="privacy.html">Privacy Policy</a></li>
-                  <li><a href="terms.html">Terms of Service</a></li>
-              </ul>
-            </div>
-          <div class="col s4">
-              <h6>Customer Service:</h6>
-              <ul>
-                  <li><a href="shipping.html">Shipping + Returns</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
-              </ul>
-            </div>
-          <div class="col s4">
-              <ul id="footerSocial">
-                  <li><i class="fab fa-instagram"></i></li>
-                  <li><i class="fab fa-facebook-f"></i></li>
-              </ul>
-              </div>
+        <div class="footer hide-on-med-and-down">
+          <ul>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="terms.html">Terms of Service</a></li>
+            <li><a href="shipping.html">Shipping + Returns</a></li>
+            <li><a href="https://instagram.com/nile_mx">Instagram</a></li>
+          </ul>
         </div>
-      </div>
 
 
 <!-- Scripts -->
