--- a/shop.html
+++ b/shop.html
@@ -48,7 +48,7 @@
 
     <div id="shopContainer">
 
-      <div id='collection-component-1589868293231'></div>
+      <div id='collection-component-1591546922227'></div>
       <script type="text/javascript">
       /*<![CDATA[*/
       (function () {
@@ -76,67 +76,68 @@
           });
           ShopifyBuy.UI.onReady(client).then(function (ui) {
             ui.createComponent('collection', {
-              id: '163033645103',
-              node: document.getElementById('collection-component-1589868293231'),
+              id: '164173742127',
+              node: document.getElementById('collection-component-1591546922227'),
               moneyFormat: '%24%20%7B%7Bamount%7D%7D',
               options: {
-                "product": {
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "calc(33.33333% - 30px)",
-          "margin-left": "30px",
-          "margin-bottom": "50px",
-          "width": "calc(33.33333% - 30px)"
-        }
-      },
+        "product": {
+          "styles": {
+            "product": {
+              "@media (min-width: 601px)": {
+                "max-width": "calc(25% - 20px)",
+                "margin-left": "20px",
+                "margin-bottom": "50px",
+                "width": "calc(25% - 20px)"
+              }
+            },
             "title": {
-              "font-family": "Jost, sans-serif",
+              "font-family": "Avant Garde, sans-serif",
               "font-weight": "normal",
-              "font-size": "15px"
+              "font-size": "14px",
+              "color": "#000000"
             },
             "button": {
-                  "font-family": "Jost, sans-serif",
-                  "font-size": "14px",
-                  "line-height": "36px",
-                  "height": "36px",
-                  "padding": "0 16px",
-                  "border-radius" : "2px",
-                  "text-transform" : "uppercase",
-                  "outline" : "0",
-                  "letter-spacing" : ".5px",
-                  ":hover": {
-                    "background-color": "#484848"
-                  },
-                  "background-color": "#424242",
-                  ":focus": {
-                    "background-color": "#444444"
+              "font-family": "Avant Garde, sans-serif",
+              "font-size": "13px",
+              "padding-top": "14.5px",
+              "padding-bottom": "14.5px",
+        "border": "1px solid black",
+              "color": "#000000",
+              ":hover": {
+                "color": "#000000",
+                "background-color": "#ffffff"
               },
-              "border-radius": "0px",
-              "padding-left": "27px",
-              "padding-right": "27px"
+              "background-color": "#ffffff",
+              ":focus": {
+                "background-color": "#ffffff"
+              },
+              "border-radius": "0px"
             },
             "quantityInput": {
-              "font-size": "14px",
-              "padding-top": "15px",
-              "padding-bottom": "15px"
+              "font-size": "13px",
+              "padding-top": "14.5px",
+              "padding-bottom": "14.5px"
             },
             "price": {
-              "font-family": "Jost, sans-serif"
+              "font-family": "Avant Garde, sans-serif",
+              "color": "#000000"
             },
             "compareAt": {
-              "font-family": "Jost, sans-serif"
+              "font-family": "Avant Garde, sans-serif",
+              "color": "#000000"
             },
             "unitPrice": {
-              "font-family": "Jost, sans-serif"
+              "font-family": "Avant Garde, sans-serif",
+              "color": "#000000"
             }
           },
           "buttonDestination": "modal",
           "contents": {
             "options": false
           },
+          "isButton": true,
           "text": {
-            "button": "View product"
+            "button": "SHOP"
           }
         },
         "productSet": {
@@ -164,52 +165,116 @@
               }
             },
             "button": {
-                  "font-family": "Jost, sans-serif",
-                  "font-size": "14px",
-                  "line-height": "36px",
-                  "height": "36px",
-                  "padding": "0 16px",
-                  "border-radius" : "2px",
-                  "text-transform" : "uppercase",
-                  "outline" : "0",
-                  "letter-spacing" : ".5px",
-                  ":hover": {
-                    "background-color": "#484848"
-                  },
-                  "background-color": "#424242",
-                  ":focus": {
-                    "background-color": "#444444"
+              "font-family": "Avant Garde, sans-serif",
+              "font-size": "13px",
+              "padding-top": "14.5px",
+              "padding-bottom": "14.5px",
+              "color": "#000000",
+        "border": "1px solid black",
+              ":hover": {
+                "color": "#000000",
+                "background-color": "#ffffff"
               },
-              "border-radius": "0px",
-              "padding-left": "27px",
-              "padding-right": "27px"
+              "background-color": "#ffffff",
+              ":focus": {
+                "background-color": "#ffffff"
+              },
+              "border-radius": "0px"
             },
             "quantityInput": {
+              "font-size": "13px",
+              "padding-top": "14.5px",
+              "padding-bottom": "14.5px"
+            },
+            "title": {
+              "font-family": "Avant Garde, sans-serif",
+              "font-weight": "normal",
+              "color": "#000000"
+            },
+            "price": {
+              "font-family": "Avant Garde, sans-serif",
               "font-size": "14px",
-              "padding-top": "15px",
-              "padding-bottom": "15px",
-              "height" : "36px"
+              "color": "#000000"
+            },
+            "compareAt": {
+              "font-family": "Avant Garde, sans-serif",
+              "font-size": "11.9px",
+              "color": "#000000"
+            },
+            "unitPrice": {
+              "font-family": "Avant Garde, sans-serif",
+              "font-size": "11.9px",
+              "color": "#000000"
+            },
+            "description": {
+              "font-family": "Avant Garde, sans-serif",
+              "color": "#000000"
             }
           },
           "text": {
-            "button": "ADD TO CART"
+            "button": "Add to cart"
           }
         },
         "cart": {
           "styles": {
             "button": {
-              "font-family": "Jost, sans-serif",
-              "font-size": "14px",
-              "padding-top": "15px",
-              "padding-bottom": "15px",
+              "font-family": "Avant Garde, sans-serif",
+              "font-size": "13px",
+              "padding-top": "14.5px",
+              "padding-bottom": "14.5px",
+        "border": "1px solid black",
+              "color": "#000000",
               ":hover": {
-                "background-color": "#b3b3b3"
+                "color": "#000000",
+                "background-color": "#ffffff"
               },
-              "background-color": "#c7c7c7",
+              "background-color": "#ffffff",
               ":focus": {
-                "background-color": "#b3b3b3"
+                "background-color": "#ffffff"
               },
               "border-radius": "0px"
+            },
+            "title": {
+              "color": "#000000"
+            },
+            "header": {
+              "color": "#000000"
+            },
+            "lineItems": {
+              "color": "#000000"
+            },
+            "subtotalText": {
+              "color": "#000000"
+            },
+            "subtotal": {
+              "color": "#000000"
+            },
+            "notice": {
+              "color": "#000000"
+            },
+            "currency": {
+              "color": "#000000"
+            },
+            "close": {
+              "color": "#000000",
+              ":hover": {
+                "color": "#000000"
+              }
+            },
+            "empty": {
+              "color": "#000000"
+            },
+            "noteDescription": {
+              "color": "#000000"
+            },
+            "discountText": {
+              "color": "#000000"
+            },
+            "discountIcon": {
+              "fill": "#000000"
+            },
+            "discountAmount": {
+              "color": "#000000"
             }
           },
           "text": {
@@ -221,17 +286,61 @@
         "toggle": {
           "styles": {
             "toggle": {
-              "font-family": "Jost, sans-serif",
-              "background-color": "#c7c7c7",
+              "font-family": "Avant Garde, sans-serif",
+              "background-color": "#ffffff",
               ":hover": {
-                "background-color": "#b3b3b3"
+                "background-color": "#e6e6e6"
               },
               ":focus": {
-                "background-color": "#b3b3b3"
+                "background-color": "#e6e6e6"
               }
             },
             "count": {
-              "font-size": "14px"
+              "font-size": "13px",
+              "color": "#000000",
+              ":hover": {
+                "color": "#000000"
+              }
+            },
+            "iconPath": {
+              "fill": "#000000"
+            }
+          }
+        },
+        "lineItem": {
+          "styles": {
+            "variantTitle": {
+              "color": "#000000"
+            },
+            "title": {
+              "color": "#000000"
+            },
+            "price": {
+              "color": "#000000"
+            },
+            "fullPrice": {
+              "color": "#000000"
+            },
+            "discount": {
+              "color": "#000000"
+            },
+            "discountIcon": {
+              "fill": "#000000"
+            },
+            "quantity": {
+              "color": "#000000"
+            },
+            "quantityIncrement": {
+              "color": "#000000",
+              "border-color": "#000000"
+            },
+            "quantityDecrement": {
+              "color": "#000000",
+              "border-color": "#000000"
+            },
+            "quantityInput": {
+              "color": "#000000",
+              "border-color": "#000000"
             }
           }
         }
