--- a/shop.html
+++ b/shop.html
@@ -170,7 +170,7 @@
               "padding-top": "14.5px",
               "padding-bottom": "14.5px",
               "color": "#000000",
-        "border": "1px solid black",
+              "border": "1px solid black!important",
               ":hover": {
                 "color": "#000000",
                 "background-color": "#ffffff"
