--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="homepage">
 <nav class="transparent z-depth-0">
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo center"><img src="lib/img/logo.png" id="logo"></a>
+          <a href="index.html" class="brand-logo center"><img src="lib/img/logo.png" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="shop.html">Shop</a></li>
